--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 #button1{
   background-color: black;
   position: relative;
-  top: 20%;
+  top: 50%;
   background-image: linear-gradient(gray,rgb(187, 181, 181));
 }
 
@@ -111,9 +111,9 @@
 <div id="close"></div>
 <div id="nav">
   
-   <div id="buttons"><center> <a href=""><button  style="width:19%; height:auto;"id="button1"><h1>Contact us</h1></button></a>
-    <a href=""><button style="width:19%; height:auto;" id="button1"><h1>Our Products</h1></button></a>
-    <a href=""><button style="width:19%; height:auto;"id="button1"><h1>About us</h1></button></a>
+   <div id="buttons"><center> <a href=""><button  style="width:19%; height:70%;"id="button1"><h3>Contact us</h3></button></a>
+    <a href=""><button style="width:19%; height:70%;" id="button1"><h3>Our Products</h3></button></a>
+    <a href=""><button style="width:19%; height:70%;"id="button1"><h3>About us</h3></button></a>
 
   </center>
   </div>
