--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <title>ஜந்து ஷாப்பிங்</title>
         <style>
           a:hover{
-            color: coral;
+            color: rgb(14, 4, 1);
+            background-color:chocolate;
           }
         body {
             margin: 0;
@@ -64,7 +65,8 @@
 
 #nav{
     background-color: gray;
-    border-radius:20% ;
+    background-image: linear-gradient(gray,rgb(85, 84, 84));
+    border-radius:0% 0% 20% 20% ;
     width: 100%;
     height: 18%;
     position: absolute;
@@ -79,30 +81,8 @@
   80%{ left:0px; top:50px}
   100%{ left:0px; top:0px}
 }
-#buttons{
-  background-color: gray;
-  position: relative;
-  animation-name: mm;
-  animation-duration:10s ;
-  color: rgb(206, 4, 4);
-  
-  
-}
-@keyframes mm{
-  0%{left:0px; top:0px}
-  100%{left:0px; top:0px}
-}
-#button1{
-  background-color: black;
-  position: relative;
-  top: 50%;
-  background-image: linear-gradient(gray,rgb(187, 181, 181));
-}
 
-  
-}
-
-        </style>
+   </style>
     </head>
 
     <body>
@@ -111,9 +91,10 @@
 <div id="close"></div>
 <div id="nav">
   
-   <div id="buttons"><center> <a href=""><button  style="width:19%; height:70%;"id="button1"><h3>Contact us</h3></button></a>
-    <a href=""><button style="width:19%; height:70%;" id="button1"><h3>Our Products</h3></button></a>
-    <a href=""><button style="width:19%; height:70%;"id="button1"><h3>About us</h3></button></a>
+   <div>
+     <center><button  style="width:19%; height:70%; border-radius:0px 0px 0px 200px; background-color: rgb(180, 175, 175); "id="button1"><a href="" style="text-decoration: none; font-family:'Times New Roman', Times, serif; font-weight: bolder; font-size:150% ;">Contact us</a></button>
+    <button style="width:19%; height:70%; border-radius:0px 0px 0px 0px; background-color: rgb(180, 175, 175);" id="button1"><a href="" style="text-decoration: none; font-family:'Times New Roman', Times, serif; font-weight: bolder; font-size:150% ;">Our Products</a></button>
+    <button style="width:19%; height:70%; border-radius:0px 0px 200px 0px; background-color: rgb(180, 175, 175);"id="button1"><a href="" style="text-decoration: none; font-family:'Times New Roman', Times, serif; font-weight: bolder; font-size:150% ;">About us</a></button>
 
   </center>
   </div>
