--- a/amp.html
+++ b/amp.html
@@ -25,7 +25,7 @@
         <hr>
         <p style="font-weight:bold; font-family:monospace ; font-size: xx-large;">Amplifiers</p>
         <hr>
-<div id="img"><img src="C:\Users\s\Desktop\1.jpg" style="position: absolute; width:auto;height:100%;">
+<div id="img"><img src="images\1.jpg" style="position: absolute; width:auto;height:100%;">
     <div id="des"> <h3>  Product No: A1 &nbsp; &nbsp;Price: 2500 Inr</h3>
 To buy this Product Directly from the Manufacturer you can Directly Call Thirupathi Electricals(Coimbatore)
     <center>For Queries <a href="https://forms.gle/fx1QXQSHNwHvM4e19">Click Here</a>
