--- a/products.html
+++ b/products.html
@@ -49,7 +49,7 @@ a{
         <tr>
             <td>Free Education</td>
             <td>0</td>
-            <td><a href="https://inayakkalvi.github.io" >Click here</a></td>
+            <td><a href="1.html" >Click here</a></td>
         </tr>
        
         </tbody>
